2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-08  Michael Koch  <konqueror@gmx.de>

        * native/jni/java-nio/java_nio_VMDirectByteBuffer.c
        (NIOGetPointer): Handle case of pointer size != 32 bit.
        (NIOGetRawData): Likewise.
        (Java_java_nio_VMDirectByteBuffer_init): Likewise.
        Fixed asking for primitive type 'long'.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-07  Mark Wielaard  <mark@klomp.org>

        * java/util/ResourceBundle.java (getObject): Clarify
        MissingResourceException detailed message.
        (tryBundle(String,ClassLoader)): Likewise.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-07  Craig Black  <craig.black@aonix.com>

        * native/jni/classpath/native_state.c
        (add_node): Update head pointer when moving node to front of list.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-06  Mark Wielaard  <mark@klomp.org>

        Reported by Timo Lindfors <timo.lindfors@iki.fi>
        java/util/regex/Matcher.java (lookingAt): Set position when match
        found.
        (matches): Implemented through lookingAt().

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-06  Mark Wielaard  <mark@klomp.org>

        Fix suggested by Timo Lindfors <timo.lindfors@iki.fi>
        * java/util/regex/Pattern.java (split(CharSequence,int)):
        Fix while empties > 0 loops.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/Thread.java (sleep): Improved
	exception messages.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/Class.java (newInstance): 
	Improved exception messages.

2005-02-10  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/net/PlainSocketImpl.c (gnu_java_net_PlainSocketImpl_socketAccept): 
	Improved debug code.
